[package]
edition      = "2024"
name         = "old_ggto_rs"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "old_ggto_rs"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "0.23.1", features = ["esp32"] }
embedded-graphics = "0.8.1"
mipidsi = "0.8.0"
display-interface-spi = "0.5.0"
embedded-hal-bus = "0.2.0"



[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
